READ ME modified

--- a/README
+++ b/README
@@ -9,5 +9,8 @@ Note: the current package offers a bridge between these two libraries
 as one may benefit from using JMUSIC analysis capabilities to construct 
 Fitness functions to be used in JGAP.
 
+Documentation: 
+	The documentation on the project is being generated and will be available soon
+
 
 
