--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Documentation:
 	User Instructions are available in the UserInstructions.pdf document
 	
 DemoPackage
-	A user demo package was provided, download the folder UserDemoPackage
+	A user demo package was provided, download the folder UserDemoPackage.
 	Read the User Instructions for more information.
 
 
